# ice_cream

./: .gitignore  Makefile  README.md  _opam  _tags  dune-project  ice_cream.opam  packages.switch
data/: test_basic.rb  test_kitchen_sink.rb  test_rbs.rb  test_rbs_advanced.rb
data/example/: example.rb
data/example/rbs/: example.rbs
data/kitchen_sink/: kitchen_sink.rb
data/rbs/: test_rbs.rb  test_rbs.rbs  test_rbs_advanced.rb  test_rbs_advanced.rbs
data/real/: rails_parameter_filter.rb
lib/: dune  environment.ml  environment.mli  filesystem.ml  ice_cream.ml  ice_cream.opam  main.ml
lib/syntax_tree/: ast.ml  ast_index.ml  dune  lexer.mll  location.ml  node.ml  parser.mly  query.ml  query.mli
lib/types/: polar_type.ml
notes/: main.md
src/: dune  ice_cream.ml  main.ml
src/ast/: dune
src/solver/: biunification.ml  dune
src/syntax_tree/: ast.ml  dune  lexer.mll  parser.mly  syntax_tree.ml
src/types/: constrained_type.ml  dune  polar_type.ml  ruby.ml  type_variable.ml  types.ml
test/: biunification_test.ml  dune  ruby_type_test.ml  test.ml
