opam-version: "2.0.8"
version: "1.0"
maintainer: "echo@jahfer.com"
authors: ["Jahfer Husain"]
homepage: "https://github.com/jahfer/ice-cream"
bug-reports: "https://github.com/jahfer/ice-cream/issues"
dev-repo: "https://github.com/jahfer/ice-cream.git"
license: "MIT"
build: [
  ["dune" "build" "--only" "ice_cream" "--root" "." "-j" jobs "@install"]
]