opam-version: "2.0"
name: "ice_cream"
version: "~dev"
synopsis: "Type inference engine for Ruby"
maintainer: "Jahfer Husain <echo@jahfer.com>"
authors: "Jahfer Husain <echo@jahfer.com>"
depends: [
  "dune" {>= "2.8.5"}
  "ounit" {>= "2.2.4"}
  "menhir" {>= "20210310"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://"
